Portfolio page edited / added hover styling

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/font-mfizz-2.4.1/font-mfizz.css">
+  <link rel="stylesheet" href="scss/hover.css">
 
 
   <!-- Styles -->
@@ -103,25 +104,65 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="portfolio">
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h2>
-        <ul class="fa-ul mb-0">
-          <li>
-            <i class="fa-li fas fa-code text-warning"></i>
-            <a href="https://github.com/ricardovaltierra/kilometers-per-truck">Trucking</a></li>
-          <li>
-          <li>
-            <i class="fa-li fas fa-code text-warning"></i>
-            <a href="https://github.com/ricardovaltierra/using-bootstrap">NewsWeek</a></li>
-          <li>
-          <li>
-            <i class="fa-li fas fa-code text-warning"></i>
-            <a href="https://github.com/ricardovaltierra/task-app">Task App</a></li>
-          <li>
-            <i class="fa-li fas fa-code text-warning"></i>
-            <a href="https://github.com/ricardovaltierra/sample_app">Sample App</a></li>
-          <li>
-            <i class="fa-li fas fa-code text-warning"></i>
-            <a href="https://github.com/ricardovaltierra/Building-with-Backgrounds-and-Gradients">Apple Page</a></li>          
-        </ul>
+        <div class="team-area">
+          <div class="single-team">
+            <img src="img/mockups/tast-app.jpg" alt="Task App">
+            <div class="team-text">
+              <h2>Task App</h2>
+              <p>task bootstrap app</p>
+              <p class="test">
+                <a href="https://github.com/ricardovaltierra/task-app"><i class="fab fa-github fa-lg"></i></a>
+                <a href="https://brtaskapp.000webhostapp.com/"><i class="fab fa-chrome fa-lg"></i></a>          
+              </p>
+            </div>
+          </div>          
+          <div class="single-team">
+            <img src="img/mockups/news-week.jpg" alt="NewsWeek site">
+            <div class="team-text">
+              <h2>NewsWeek</h2>
+              <p>newsweek clone</p>
+              <p class="test">
+                <a href="https://github.com/ricardovaltierra/using-bootstrap"><i class="fab fa-github fa-lg"></i></a>
+                <a href="https://mvnewsweek.000webhostapp.com/"><i class="fab fa-chrome fa-lg"></i></a>          
+              </p>
+            </div>
+          </div>
+          <div class="single-team">
+            <img src="img/mockups/apple-old-page.jpg" alt="Apple Page">
+            <div class="team-text">
+              <h2>Apple page</h2>
+              <p>apple vintage clone</p>
+              <p class="test">
+                <a href="https://github.com/ricardovaltierra/Building-with-Backgrounds-and-Gradients"><i class="fab fa-github fa-lg"></i></a>
+                <a href="https://apple-old-page.herokuapp.com/index.html"><i class="fab fa-chrome fa-lg"></i></a>          
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="team-area">
+          <div class="single-team">
+            <img src="img/mockups/sample-app.jpg" alt="Sample App">
+            <div class="team-text">
+              <h2>Sample App</h2>
+              <p>miache hartl's sample app</p>
+              <p class="test">
+                <a href="https://github.com/ricardovaltierra/sample_app"><i class="fab fa-github fa-lg"></i></a>
+                <a href="https://sample-app-rormichaelhartl.herokuapp.com/"><i class="fab fa-chrome fa-lg"></i></a>          
+              </p>
+            </div>
+          </div>          
+          <div class="single-team">
+            <img src="img/mockups/trucking.jpg" alt="trucking">
+            <div class="team-text">
+              <h2>Truking</h2>
+              <p>mobile truking app</p>
+              <p class="test">
+                <a href="https://github.com/ricardovaltierra/kilometers-per-truck"><i class="fab fa-github fa-lg"></i></a>
+                <a href="https://truckinglat.herokuapp.com/"><i class="fab fa-chrome fa-lg"></i></a>          
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -317,7 +358,7 @@
 
   <!-- Scripts -->
   <script src="js/resume.min.js"></script>
-
+  
 </body>
 
 </html>
