--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/font-mfizz-2.4.1/font-mfizz.css">
-  <link rel="stylesheet" href="scss/hover.css">
+  <link rel="stylesheet" href="css/hover.css">
 
 
   <!-- Styles -->
