--- a/index.html
+++ b/index.html
@@ -211,6 +211,8 @@
             <h3 class="mb-0">Microverse</h3>
             <div class="subheading mb-3">Diploma</div>
             <p>Remote Full Stack Web Development Program, Full Time</p>
+            <p>Spent 1100+ hours mastering algorithms, data structures, and full-stack development while simultaneously developing projects with Ruby, Rails, JavaScript, React, and Redux</p>
+            <p>Developed skills in remote pair-programming using GitHub, industry-standard gitflow, and daily standups to communicate and collaborate with international remote developers</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">October 2019 - Present</span>
@@ -219,20 +221,11 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Consciencia Consultores</h3>
-            <div class="subheading mb-3">Diploma</div>            
-            <p>NLP Master Practitioner Certificate</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">February - December 2018</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
             <h3 class="mb-0">Tecnológico Nacional De México (ITL)</h3>
             <div class="subheading mb-3">Computer Systems Engineer</div>
             <p>ISC (Degree in process)</p>
+            <p>Professional practices developing a smartphone test farm with open source software and implementing automatized testing with Appium & TestNG</p>
+            <p>Outstanding performance testimony on Final Exam for Graduate Studies</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2011 - June 2017</span>
@@ -247,6 +240,17 @@
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">September - November 2015</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Consciencia Consultores</h3>
+            <div class="subheading mb-3">Diploma</div>            
+            <p>Neuro Linguistic Programming Master Practitioner Certificate</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">February - December 2018</span>
           </div>
         </div>
 
