media querie added for mobile

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <a href="https://brtaskapp.000webhostapp.com/"><i class="fab fa-chrome fa-lg"></i></a>          
               </p>
             </div>
-          </div>          
+          </div>
           <div class="single-team">
             <img src="img/mockups/news-week.jpg" alt="NewsWeek site">
             <div class="team-text">
@@ -137,14 +137,14 @@
                 <a href="https://apple-old-page.herokuapp.com/index.html"><i class="fab fa-chrome fa-lg"></i></a>          
               </p>
             </div>
-          </div>
+          </div>          
         </div>
         <div class="team-area">
           <div class="single-team">
             <img src="img/mockups/sample-app.jpg" alt="Sample App">
             <div class="team-text">
               <h2>Sample App</h2>
-              <p>miache hartl's sample app</p>
+              <p>michael hartl's app</p>
               <p class="test">
                 <a href="https://github.com/ricardovaltierra/sample_app"><i class="fab fa-github fa-lg"></i></a>
                 <a href="https://sample-app-rormichaelhartl.herokuapp.com/"><i class="fab fa-chrome fa-lg"></i></a>          
