fixed broken social links

--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
           <a href="https://github.com/ricardovaltierra">
             <i class="fab fa-github"></i>
           </a>
-          <a href="mailto:ricardo_valtierra@outlook.com">          	
+          <a href="mailto:ricardo_valtierra@outlook.com">
             <i class="far fa-envelope-open"></i>
           </a>
-          <a href="mailto:ricardo_valtierra@outlook.com">          	
+          <a href="https://twitter.com/RicardoValtie15">
             <i class="fab fa-twitter"></i>
           </a>
-          <a href="mailto:ricardo_valtierra@outlook.com">          	
+          <a href="https://api.whatsapp.com/send?phone=524776777394&text=Let's talk about development">
             <i class="fab fa-whatsapp"></i>
           </a>
         </div>
