fixing grammatical errors

--- a/index.html
+++ b/index.html
@@ -78,21 +78,21 @@
           <br>
           <a href="mailto:ricardo_valtierra@outlook.com">ricardo_valtierra@outlook.com</a>
         </div>
-        <p class="lead mb-5">Experencied within technological systems of information, database design and deploy, dinamic web design, desktop & android development. Deployment and management of system or aplication software with emerging technologies.</p>
+        <p class="lead mb-5">Experienced within technological systems of information, database design and deploy, dynamic web design, desktop & android development. Deployment and management of systems or application software with emerging technologies</p>
         <div class="social-icons">
-          <a href="http://www.linkedin.com/in/ricardovaltierra">
+          <a href="http://www.linkedin.com/in/ricardovaltierra" target = "_blank">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="https://github.com/ricardovaltierra">
+          <a href="https://github.com/ricardovaltierra" target = "_blank">
             <i class="fab fa-github"></i>
           </a>
-          <a href="mailto:ricardo_valtierra@outlook.com">
+          <a href="mailto:ricardo_valtierra@outlook.com" target = "_blank">
             <i class="far fa-envelope-open"></i>
           </a>
-          <a href="https://twitter.com/RicardoValtie15">
+          <a href="https://twitter.com/RicardoValtie15" target = "_blank">
             <i class="fab fa-twitter"></i>
           </a>
-          <a href="https://api.whatsapp.com/send?phone=524776777394&text=Let's talk about development">
+          <a href="https://api.whatsapp.com/send?phone=524776777394&text=Let's talk about development" target = "_blank">
             <i class="fab fa-whatsapp"></i>
           </a>
         </div>
@@ -111,8 +111,8 @@
               <h2>Task App</h2>
               <p>task bootstrap app</p>
               <p class="test">
-                <a href="https://github.com/ricardovaltierra/task-app"><i class="fab fa-github fa-lg"></i></a>
-                <a href="https://brtaskapp.000webhostapp.com/"><i class="fab fa-chrome fa-lg"></i></a>          
+                <a href="https://github.com/ricardovaltierra/task-app" target = "_blank"><i class="fab fa-github fa-lg"></i></a>
+                <a href="https://brtaskapp.000webhostapp.com/" target = "_blank"><i class="fab fa-chrome fa-lg"></i></a>          
               </p>
             </div>
           </div>
@@ -122,8 +122,8 @@
               <h2>NewsWeek</h2>
               <p>newsweek clone</p>
               <p class="test">
-                <a href="https://github.com/ricardovaltierra/using-bootstrap"><i class="fab fa-github fa-lg"></i></a>
-                <a href="https://mvnewsweek.000webhostapp.com/"><i class="fab fa-chrome fa-lg"></i></a>          
+                <a href="https://github.com/ricardovaltierra/using-bootstrap" target = "_blank"><i class="fab fa-github fa-lg"></i></a>
+                <a href="https://mvnewsweek.000webhostapp.com/" target = "_blank"><i class="fab fa-chrome fa-lg"></i></a>          
               </p>
             </div>
           </div>
@@ -133,8 +133,8 @@
               <h2>Apple page</h2>
               <p>apple vintage clone</p>
               <p class="test">
-                <a href="https://github.com/ricardovaltierra/Building-with-Backgrounds-and-Gradients"><i class="fab fa-github fa-lg"></i></a>
-                <a href="https://apple-old-page.herokuapp.com/index.html"><i class="fab fa-chrome fa-lg"></i></a>          
+                <a href="https://github.com/ricardovaltierra/Building-with-Backgrounds-and-Gradients" target = "_blank"><i class="fab fa-github fa-lg"></i></a>
+                <a href="https://apple-old-page.herokuapp.com/index.html" target = "_blank"><i class="fab fa-chrome fa-lg"></i></a>          
               </p>
             </div>
           </div>          
@@ -146,8 +146,8 @@
               <h2>Sample App</h2>
               <p>michael hartl's app</p>
               <p class="test">
-                <a href="https://github.com/ricardovaltierra/sample_app"><i class="fab fa-github fa-lg"></i></a>
-                <a href="https://sample-app-rormichaelhartl.herokuapp.com/"><i class="fab fa-chrome fa-lg"></i></a>          
+                <a href="https://github.com/ricardovaltierra/sample_app" target = "_blank"><i class="fab fa-github fa-lg"></i></a>
+                <a href="https://sample-app-rormichaelhartl.herokuapp.com/" target = "_blank"><i class="fab fa-chrome fa-lg"></i></a>          
               </p>
             </div>
           </div>          
@@ -157,8 +157,8 @@
               <h2>Truking</h2>
               <p>mobile truking app</p>
               <p class="test">
-                <a href="https://github.com/ricardovaltierra/kilometers-per-truck"><i class="fab fa-github fa-lg"></i></a>
-                <a href="https://truckinglat.herokuapp.com/"><i class="fab fa-chrome fa-lg"></i></a>          
+                <a href="https://github.com/ricardovaltierra/kilometers-per-truck" target = "_blank"><i class="fab fa-github fa-lg"></i></a>
+                <a href="https://truckinglat.herokuapp.com/" target = "_blank"><i class="fab fa-chrome fa-lg"></i></a>          
               </p>
             </div>
           </div>
@@ -177,7 +177,7 @@
             <h3 class="mb-0">Mentor (Volunteer)
             </h3>
             <div class="subheading mb-3">Microverse</div>
-            <p>Mentoring students on learning on day to day assessments during the program, providing support to solve conflicts and feedback in activities.</p>            
+            <p>Mentoring students on learning on day to day assessments during the program, providing support to solve conflicts and feedback in activities</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Feb 2020 - Present</span>
@@ -236,7 +236,7 @@
           <div class="resume-content">
             <h3 class="mb-0">TECNM</h3>
             <div class="subheading mb-3">Degree in Entrepreneurship and Management</div>
-            <p>Participated in the ‘Gamification - Hack Bajío’ contest realized by ITESM</p>
+            <p>Participated in the ‘Gamification - Hack Bajío’ contest realized by ITESM, helping partners to develop new ideas and solutions to implement before due date</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">September - November 2015</span>
@@ -247,7 +247,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Consciencia Consultores</h3>
             <div class="subheading mb-3">Diploma</div>            
-            <p>Neuro Linguistic Programming Master Practitioner Certificate</p>
+            <p>Neuro-Linguistic Programming Master Practitioner Certificate</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">February - December 2018</span>
@@ -346,8 +346,8 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
-        <p>Besides my carreer development, I enjoy spending my time on some other activities and projects. Investigation and reading about diversal topics like general culture, science and self-improvement are some of my preferred activities along my free time. I like to practice some sports like jogging, basketball and anaerobic excersice.</p>
-        <p class="mb-0">In entretainment, I follow a number of comedy and culture genre movies and television shows, I am an aspiring meditator, and I spend the rest of my free time exploring on software engineering.</p>
+        <p>Besides my career development, I enjoy spending my time on some other activities and projects. Investigation and reading about diverse topics like general culture, science, and self-improvement are some of my preferred activities in my free time. I like to practice some sports like jogging, basketball and anaerobic exercise</p>
+        <p class="mb-0">In entertainment, I follow a number of comedy and culture genre movies and television shows, I am an aspiring meditator, and I spend the rest of my free time exploring new web technologies</p>
       </div>
     </section>
 
