added stack description on mobile

--- a/index.html
+++ b/index.html
@@ -110,10 +110,17 @@
             <div class="team-text">
               <h2>Task App</h2>
               <p>task bootstrap app</p>
-              <p class="test">
-                <a href="https://github.com/ricardovaltierra/task-app" target = "_blank"><i class="fab fa-github fa-lg"></i></a>
-                <a href="https://brtaskapp.000webhostapp.com/" target = "_blank"><i class="fab fa-chrome fa-lg"></i></a>          
-              </p>
+              <div class="summary-stack">
+                <ul class="item1">
+                  <li>JS</li>
+                  <li>Bootstrap</li>
+                  <li>PHP</li>
+                </ul>
+                <p class="item2">
+                  <a href="https://github.com/ricardovaltierra/task-app" target = "_blank"><i class="fab fa-github fa-lg"></i></a>
+                  <a href="https://brtaskapp.000webhostapp.com/" target = "_blank"><i class="fab fa-chrome fa-lg"></i></a>          
+                </p>
+              </div>
             </div>
           </div>
           <div class="single-team">
@@ -121,10 +128,17 @@
             <div class="team-text">
               <h2>NewsWeek</h2>
               <p>newsweek clone</p>
-              <p class="test">
-                <a href="https://github.com/ricardovaltierra/using-bootstrap" target = "_blank"><i class="fab fa-github fa-lg"></i></a>
-                <a href="https://mvnewsweek.000webhostapp.com/" target = "_blank"><i class="fab fa-chrome fa-lg"></i></a>          
-              </p>
+              <div class="summary-stack">
+                <ul class="item1">
+                  <li>HTML</li>
+                  <li>Bootstrap</li>
+                  <li>CSS</li>
+                </ul>
+                <p class="item2">
+                  <a href="https://github.com/ricardovaltierra/using-bootstrap" target = "_blank"><i class="fab fa-github fa-lg"></i></a>
+                  <a href="https://mvnewsweek.000webhostapp.com/" target = "_blank"><i class="fab fa-chrome fa-lg"></i></a>          
+                </p>
+              </div>
             </div>
           </div>
           <div class="single-team">
@@ -132,10 +146,17 @@
             <div class="team-text">
               <h2>Apple page</h2>
               <p>apple vintage clone</p>
-              <p class="test">
-                <a href="https://github.com/ricardovaltierra/Building-with-Backgrounds-and-Gradients" target = "_blank"><i class="fab fa-github fa-lg"></i></a>
-                <a href="https://apple-old-page.herokuapp.com/index.html" target = "_blank"><i class="fab fa-chrome fa-lg"></i></a>          
-              </p>
+              <div class="summary-stack">
+                <ul class="item1">
+                  <li>HTML</li>
+                  <li>CSS</li>
+                  <li>000WebHost</li>
+                </ul>
+                <p class="item2">
+                  <a href="https://github.com/ricardovaltierra/Building-with-Backgrounds-and-Gradients" target = "_blank"><i class="fab fa-github fa-lg"></i></a>
+                  <a href="https://apple-old-page.herokuapp.com/index.html" target = "_blank"><i class="fab fa-chrome fa-lg"></i></a>          
+                </p>
+              </div>
             </div>
           </div>          
         </div>
@@ -145,10 +166,17 @@
             <div class="team-text">
               <h2>Sample App</h2>
               <p>michael hartl's app</p>
-              <p class="test">
-                <a href="https://github.com/ricardovaltierra/sample_app" target = "_blank"><i class="fab fa-github fa-lg"></i></a>
-                <a href="https://sample-app-rormichaelhartl.herokuapp.com/" target = "_blank"><i class="fab fa-chrome fa-lg"></i></a>          
-              </p>
+              <div class="summary-stack">
+                <ul class="item1">
+                  <li>Rails</li>
+                  <li>Bootstrap</li>
+                  <li>Heroku</li>
+                </ul>
+                <p class="item2">
+                  <a href="https://github.com/ricardovaltierra/sample_app" target = "_blank"><i class="fab fa-github fa-lg"></i></a>
+                  <a href="https://sample-app-rormichaelhartl.herokuapp.com/" target = "_blank"><i class="fab fa-chrome fa-lg"></i></a>          
+                </p>
+              </div>
             </div>
           </div>          
           <div class="single-team">
@@ -156,10 +184,17 @@
             <div class="team-text">
               <h2>Truking</h2>
               <p>mobile truking app</p>
-              <p class="test">
-                <a href="https://github.com/ricardovaltierra/kilometers-per-truck" target = "_blank"><i class="fab fa-github fa-lg"></i></a>
-                <a href="https://truckinglat.herokuapp.com/" target = "_blank"><i class="fab fa-chrome fa-lg"></i></a>          
-              </p>
+              <div class="summary-stack">
+                <ul class="item1">
+                  <li>Rails</li>
+                  <li>PostgreSQL</li>
+                  <li>Heroku</li>
+                </ul>
+                <p class="item2">
+                  <a href="https://github.com/ricardovaltierra/kilometers-per-truck" target = "_blank"><i class="fab fa-github fa-lg"></i></a>
+                  <a href="https://truckinglat.herokuapp.com/" target = "_blank"><i class="fab fa-chrome fa-lg"></i></a>          
+                </p>
+              </div>
             </div>
           </div>
         </div>
@@ -351,6 +386,25 @@
       </div>
     </section>
 
+    <footer>
+      <div class="social-icons">
+        <a href="http://www.linkedin.com/in/ricardovaltierra" target = "_blank">
+          <i class="fab fa-linkedin-in"></i>
+        </a>
+        <a href="https://github.com/ricardovaltierra" target = "_blank">
+          <i class="fab fa-github"></i>
+        </a>
+        <a href="mailto:ricardo_valtierra@outlook.com" target = "_blank">
+          <i class="far fa-envelope-open"></i>
+        </a>
+        <a href="https://twitter.com/RicardoValtie15" target = "_blank">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="https://api.whatsapp.com/send?phone=524776777394&text=Let's talk about development" target = "_blank">
+          <i class="fab fa-whatsapp"></i>
+        </a>
+      </div>
+    </footer>
   </div>
 
   <!-- BC JS -->
