portfolio text positioning

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Real estate advisor - Community Manager
             </h3>
-            <div class="subheading mb-3">Abundia Real State Servi</div>
+            <div class="subheading mb-3">Abundia Real State Services</div>
             <p>Direct contact with the customer · Negotiation and sales closure · Development and implementation of content for market attraction through web media · Administration processes and electronic billing</p>
           </div>
           <div class="resume-date text-md-right">
