added 3 new projects / added images / stlying on mobile query for positioning heover elements

--- a/index.html
+++ b/index.html
@@ -106,33 +106,33 @@
         <h2 class="mb-5">Portfolio</h2>
         <div class="team-area">
           <div class="single-team">
-            <img src="img/mockups/tast-app.jpg" alt="Task App">
+            <img src="img/mockups/rpg.png" alt="RPG Game">
             <div class="team-text">
-              <h2>Task App</h2>
-              <p>task bootstrap app</p>
+              <h2>RPG Game</h2>
+              <p>Little Red Ridding Hood</p>
               <div class="summary-stack">
                 <ul class="item1">
-                  <li>JS</li>
-                  <li>Bootstrap</li>
-                  <li>PHP</li>
+                  <li>ES6</li>
+                  <li>Phaser 3</li>
+                  <li>Webpack 4</li>
                 </ul>
                 <p class="item2">
-                  <a href="https://github.com/ricardovaltierra/task-app" target = "_blank"><i class="fab fa-github fa-lg"></i></a>
-                  <a href="https://brtaskapp.000webhostapp.com/" target = "_blank"><i class="fab fa-chrome fa-lg"></i></a>          
+                  <a href="https://github.com/ricardovaltierra/rpg-game" target = "_blank"><i class="fab fa-github fa-lg"></i></a>
+                  <a href="https://little-red-ridding-hood.netlify.app/" target = "_blank"><i class="fab fa-chrome fa-lg"></i></a>          
                 </p>
               </div>
             </div>
           </div>
           <div class="single-team">
-            <img src="img/mockups/news-week.jpg" alt="NewsWeek site">
+            <img src="img/mockups/weather.png" alt="Weather App">
             <div class="team-text">
-              <h2>NewsWeek</h2>
-              <p>newsweek clone</p>
+              <h2>Weather App</h2>
+              <p>Mobile first on on F° || C°</p>
               <div class="summary-stack">
                 <ul class="item1">
-                  <li>HTML</li>
-                  <li>Bootstrap</li>
-                  <li>CSS</li>
+                  <li>AerisWeather</li>
+                  <li>Algolia</li>
+                  <li>Bulma</li>
                 </ul>
                 <p class="item2">
                   <a href="https://github.com/ricardovaltierra/using-bootstrap" target = "_blank"><i class="fab fa-github fa-lg"></i></a>
@@ -142,19 +142,19 @@
             </div>
           </div>
           <div class="single-team">
-            <img src="img/mockups/apple-old-page.jpg" alt="Apple Page">
+            <img src="img/mockups/restaurant.png" alt="Restaurant Page">
             <div class="team-text">
-              <h2>Apple page</h2>
-              <p>apple vintage clone</p>
+              <h2>Restaurant</h2>
+              <p>Don Pastor clone</p>
               <div class="summary-stack">
                 <ul class="item1">
-                  <li>HTML</li>
+                  <li>ES6</li>
+                  <li>Webpack 4</li>
                   <li>CSS</li>
-                  <li>000WebHost</li>
                 </ul>
                 <p class="item2">
-                  <a href="https://github.com/ricardovaltierra/Building-with-Backgrounds-and-Gradients" target = "_blank"><i class="fab fa-github fa-lg"></i></a>
-                  <a href="https://apple-old-page.herokuapp.com/index.html" target = "_blank"><i class="fab fa-chrome fa-lg"></i></a>          
+                  <a href="https://github.com/ricardovaltierra/restaurant" target = "_blank"><i class="fab fa-github fa-lg"></i></a>
+                  <a href="https://restaurant-clone.netlify.app/" target = "_blank"><i class="fab fa-chrome fa-lg"></i></a>          
                 </p>
               </div>
             </div>
@@ -162,14 +162,14 @@
         </div>
         <div class="team-area">
           <div class="single-team">
-            <img src="img/mockups/sample-app.jpg" alt="Sample App">
+            <img src="img/mockups/trucking.jpg" alt="Trucking">
             <div class="team-text">
-              <h2>Sample App</h2>
-              <p>michael hartl's app</p>
+              <h2>Trucking</h2>
+              <p>Kilometer's per truck</p>
               <div class="summary-stack">
                 <ul class="item1">
                   <li>Rails</li>
-                  <li>Bootstrap</li>
+                  <li>PostgreSQL</li>
                   <li>Heroku</li>
                 </ul>
                 <p class="item2">
@@ -180,19 +180,19 @@
             </div>
           </div>          
           <div class="single-team">
-            <img src="img/mockups/trucking.jpg" alt="trucking">
+            <img src="img/mockups/news-week.jpg" alt="Newsweek page">
             <div class="team-text">
-              <h2>Truking</h2>
-              <p>mobile truking app</p>
+              <h2>Newsweek</h2>
+              <p>A boootstrap clone</p>
               <div class="summary-stack">
                 <ul class="item1">
-                  <li>Rails</li>
-                  <li>PostgreSQL</li>
-                  <li>Heroku</li>
+                  <li>HTML</li>
+                  <li>Bootstrap</li>
+                  <li>CSS</li>
                 </ul>
                 <p class="item2">
-                  <a href="https://github.com/ricardovaltierra/kilometers-per-truck" target = "_blank"><i class="fab fa-github fa-lg"></i></a>
-                  <a href="https://truckinglat.herokuapp.com/" target = "_blank"><i class="fab fa-chrome fa-lg"></i></a>          
+                  <a href="https://github.com/ricardovaltierra/bootstrap" target = "_blank"><i class="fab fa-github fa-lg"></i></a>
+                  <a href="https://newsweek-responsive.netlify.app/" target = "_blank"><i class="fab fa-chrome fa-lg"></i></a>          
                 </p>
               </div>
             </div>
