fixed broken projects link

--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
                   <li>Bulma</li>
                 </ul>
                 <p class="item2">
-                  <a href="https://github.com/ricardovaltierra/using-bootstrap" target = "_blank"><i class="fab fa-github fa-lg"></i></a>
-                  <a href="https://mvnewsweek.000webhostapp.com/" target = "_blank"><i class="fab fa-chrome fa-lg"></i></a>          
+                  <a href="https://github.com/ricardovaltierra/weather-app" target = "_blank"><i class="fab fa-github fa-lg"></i></a>
+                  <a href="weather-query.netlify.app/" target = "_blank"><i class="fab fa-chrome fa-lg"></i></a>          
                 </p>
               </div>
             </div>
@@ -173,8 +173,8 @@
                   <li>Heroku</li>
                 </ul>
                 <p class="item2">
-                  <a href="https://github.com/ricardovaltierra/sample_app" target = "_blank"><i class="fab fa-github fa-lg"></i></a>
-                  <a href="https://sample-app-rormichaelhartl.herokuapp.com/" target = "_blank"><i class="fab fa-chrome fa-lg"></i></a>          
+                  <a href="https://github.com/ricardovaltierra/kilometers-per-truck" target = "_blank"><i class="fab fa-github fa-lg"></i></a>
+                  <a href="truckinglat.herokuapp.com/" target = "_blank"><i class="fab fa-chrome fa-lg"></i></a>          
                 </p>
               </div>
             </div>
