--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 </ul>
                 <p class="item2">
                   <a href="https://github.com/ricardovaltierra/weather-app" target = "_blank"><i class="fab fa-github fa-lg"></i></a>
-                  <a href="weather-query.netlify.app/" target = "_blank"><i class="fab fa-chrome fa-lg"></i></a>          
+                  <a href="https://weather-query.netlify.app/" target = "_blank"><i class="fab fa-chrome fa-lg"></i></a>          
                 </p>
               </div>
             </div>
@@ -174,7 +174,7 @@
                 </ul>
                 <p class="item2">
                   <a href="https://github.com/ricardovaltierra/kilometers-per-truck" target = "_blank"><i class="fab fa-github fa-lg"></i></a>
-                  <a href="truckinglat.herokuapp.com/" target = "_blank"><i class="fab fa-chrome fa-lg"></i></a>          
+                  <a href="https://truckinglat.herokuapp.com/" target = "_blank"><i class="fab fa-chrome fa-lg"></i></a>          
                 </p>
               </div>
             </div>
