added preview image for social embed

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta property="og:im" content="img/preview.png">
+  <meta name="linkedin:image" content="img/preview.png">
+  <meta property="og:url" content="https://ricardovaltierra.me">
+  <meta name="linkedin:card" content="summary">
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -212,7 +216,10 @@
             <h3 class="mb-0">Mentor (Volunteer)
             </h3>
             <div class="subheading mb-3">Microverse</div>
-            <p>Mentoring students on learning on day to day assessments during the program, providing support to solve conflicts and feedback in activities</p>
+            <p>Solving concerns on learning materials no longer provided by the program on books and forums<br>
+               Proposing improvements to code organization for the quality and overall performance<br>
+               Providing advice and tips on how to maintain motivation and maintain longevity in the program 
+            </p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Feb 2020 - Present</span>
@@ -223,11 +230,12 @@
           <div class="resume-content">
             <h3 class="mb-0">Real estate advisor - Community Manager
             </h3>
-            <div class="subheading mb-3">Abundia Real State Services</div>
-            <p>Direct contact with the customer · Negotiation and sales closure · Development and implementation of content for market attraction through web media · Administration processes and electronic billing</p>
+            <div class="subheading mb-3">Abundia Real Estate Services</div>
+            <p>Direct negotiation and communication with clients to translate requirements into selected house options<br>
+               Developed customer attraction through social media generating media content well accepted by the audience</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">May 2018 - Present</span>
+            <span class="text-primary">May 2018 - September 2019</span>
           </div>
         </div>        
 
@@ -246,8 +254,8 @@
             <h3 class="mb-0">Microverse</h3>
             <div class="subheading mb-3">Diploma</div>
             <p>Remote Full Stack Web Development Program, Full Time</p>
-            <p>Spent 1100+ hours mastering algorithms, data structures, and full-stack development while simultaneously developing projects with Ruby, Rails, JavaScript, React, and Redux</p>
-            <p>Developed skills in remote pair-programming using GitHub, industry-standard gitflow, and daily standups to communicate and collaborate with international remote developers</p>
+            <p>Handling of 1600+ hours mastering algorithms, data structures, and full-stack development while simultaneously developing projects with Ruby, Rails, JavaScript, React, and Redux</p>
+            <p>Developing skills in remote pair-programming using GitHub, industry-standard Gitflow, and daily standups to communicate and collaborate with international remote developers</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">October 2019 - Present</span>
@@ -259,7 +267,7 @@
             <h3 class="mb-0">Tecnológico Nacional De México (ITL)</h3>
             <div class="subheading mb-3">Computer Systems Engineer</div>
             <p>ISC (Degree in process)</p>
-            <p>Professional practices developing a smartphone test farm with open source software and implementing automatized testing with Appium & TestNG</p>
+            <p>Implemented an Android mobile test server with open source software and research about the work environment, functionalities, and tools to handle, aside with a post-implementation test automation suite</p>
             <p>Outstanding performance testimony on Final Exam for Graduate Studies</p>
           </div>
           <div class="resume-date text-md-right">
