added preview image for social embed

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="linkedin:image" content="img/preview.png">
   <meta property="og:url" content="https://ricardovaltierra.me">
   <meta name="linkedin:card" content="summary">
-  <meta name="description" content="">
+  <meta name="description" content="Personal Portfolio">
   <meta name="author" content="">
 
   <title>Ricardo Valtierra | Portfolio</title>
