added preview image for social embed

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <meta name="linkedin:image" content="img/preview.png">
   <meta property="og:url" content="https://ricardovaltierra.me">
   <meta name="linkedin:card" content="summary">
-  <meta name="og:description" content="Personal Portfolio">
+  <meta property="og:description" content="Ricardo Valtierra's Personal Portfolio">
   <meta property="og:title" content="Personal Portfolio"/>
-  <meta property="og:published_time" content="2020-08-11"/>
+  <meta property="og:publish_date" content="2020-08-11"/>
   <meta name="author" content="Ricardo Valtierra">
 
   <title>Ricardo Valtierra | Portfolio</title>
