added preview image for social embed

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="linkedin:card" content="summary">
   <meta property="og:description" content="Ricardo Valtierra's Personal Portfolio">
   <meta property="og:title" content="Personal Portfolio"/>
-  <meta property="og:publish_date" content="2020-08-11"/>
+  <meta property="og:date" content="2020-08-11"/>
   <meta name="author" content="Ricardo Valtierra">
 
   <title>Ricardo Valtierra | Portfolio</title>
