--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta property="og:image" content="img/preview.png">
-  <meta name="linkedin:image" content="img/preview.png">
+  <meta property="og:image" content="https://raw.githubusercontent.com/ricardovaltierra/ricardovaltierra.github.io/master/img/preview.png">
+  <meta name="linkedin:image" content="https://raw.githubusercontent.com/ricardovaltierra/ricardovaltierra.github.io/master/img/preview.png">
   <meta property="og:url" content="https://ricardovaltierra.me">
   <meta name="linkedin:card" content="summary">
   <meta property="og:description" content="Ricardo Valtierra's Personal Portfolio">
