information update on Education

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="linkedin:card" content="summary">
   <meta property="og:description" content="Ricardo Valtierra's Personal Portfolio">
   <meta property="og:title" content="Personal Portfolio"/>
-  <meta property="og:date" content="2020-08-11"/>
+  <meta name='date' content='Aug. 11, 2020'>
   <meta name="author" content="Ricardo Valtierra">
 
   <title>Ricardo Valtierra | Portfolio</title>
@@ -280,8 +280,8 @@
 		    <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">TECNM</h3>
-            <div class="subheading mb-3">Degree in Entrepreneurship and Management</div>
-            <p>Participated in the ‘Gamification - Hack Bajío’ contest realized by ITESM, helping partners to develop new ideas and solutions to implement before due date</p>
+            <div class="subheading mb-3">Module for Entrepreneurship and Management</div>
+            <p>Participated in the ‘Gamification - Hack Bajío’ contest realized by ITESM, collaborating on creative and solution processes</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">September - November 2015</span>
