Updated intro front page

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <br>
           <a href="mailto:ricardo_valtierra@outlook.com">ricardo_valtierra@outlook.com</a>
         </div>
-        <p class="lead mb-5">Experienced within technological systems of information, database design and deploy, dynamic web design, desktop & android development. Deployment and management of systems or application software with emerging technologies</p>
+        <p class="lead mb-5">Experienced on the Rails / JS / React-Redux stack, database design and deploy, dynamic & responsive web design. Deployment and management of web applications</p>
         <div class="social-icons">
           <a href="http://www.linkedin.com/in/ricardovaltierra" target = "_blank">
             <i class="fab fa-linkedin-in"></i>
