spec ratio test

--- a/index.html
+++ b/index.html
@@ -79,12 +79,14 @@
         <h1 class="mb-0">RICARDO
           <span class="text-primary">VALTIERRA</span>
         </h1>
-        <div class="subheading mb-5">Full-Stack Web Developer
+        <div class="subheading mb-5">Full-Stack Developer
           <br> +52 477 677 7394
           <br>
           <a href="mailto:ricardo_valtierra@outlook.com">ricardo_valtierra@outlook.com</a>
         </div>
-        <p class="lead mb-5">Experienced on the Rails / JS / React-Redux stack, database design and deploy, dynamic & responsive web design. Deployment and management of web applications</p>
+        <p class="lead mb-5">
+        Experienced building sites and applications with responsiveness and a full relational DB design. Specialized on the Ruby / Rails / React / Redux stack with full deployment.
+      </p>
         <div class="social-icons">
           <a href="http://www.linkedin.com/in/ricardovaltierra" target = "_blank">
             <i class="fab fa-linkedin-in"></i>
