--- a/index.html
+++ b/index.html
@@ -211,101 +211,6 @@
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="experience">
-      <div class="w-100">
-        <h2 class="mb-5">Experience</h2>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Mentor (Volunteer)
-            </h3>
-            <div class="subheading mb-3">Microverse</div>
-            <p>Solving concerns on learning materials no longer provided by the program on books and forums<br>
-               Proposing improvements to code organization for the quality and overall performance<br>
-               Providing advice and tips on how to maintain motivation and maintain longevity in the program 
-            </p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">Feb 2020 - Present</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">Real estate advisor - Community Manager
-            </h3>
-            <div class="subheading mb-3">Abundia Real Estate Services</div>
-            <p>Direct negotiation and communication with clients to translate requirements into selected house options<br>
-               Developed customer attraction through social media generating media content well accepted by the audience</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">May 2018 - September 2019</span>
-          </div>
-        </div>        
-
-      </div>
-
-    </section>
-
-    <hr class="m-0">
-
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
-      <div class="w-100">
-        <h2 class="mb-5">Education</h2>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Microverse</h3>
-            <div class="subheading mb-3">Diploma</div>
-            <p>Remote Full Stack Web Development Program, Full Time</p>
-            <p>Handling of 1600+ hours mastering algorithms, data structures, and full-stack development while simultaneously developing projects with Ruby, Rails, JavaScript, React, and Redux</p>
-            <p>Developing skills in remote pair-programming using GitHub, industry-standard Gitflow, and daily standups to communicate and collaborate with international remote developers</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">October 2019 - Present</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Tecnológico Nacional De México (ITL)</h3>
-            <div class="subheading mb-3">Computer Systems Engineer</div>
-            <p>ISC (Degree in process)</p>
-            <p>Implemented an Android mobile test server with open source software and research about the work environment, functionalities, and tools to handle, aside with a post-implementation test automation suite</p>
-            <p>Outstanding performance testimony on Final Exam for Graduate Studies</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2011 - June 2017</span>
-          </div>
-        </div>
-
-		    <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">TECNM</h3>
-            <div class="subheading mb-3">Module for Entrepreneurship and Management</div>
-            <p>Participated in the ‘Gamification - Hack Bajío’ contest realized by ITESM, collaborating on creative and solution processes</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">September - November 2015</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Consciencia Consultores</h3>
-            <div class="subheading mb-3">Diploma</div>            
-            <p>Neuro-Linguistic Programming Master Practitioner Certificate</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">February - December 2018</span>
-          </div>
-        </div>
-
-      </div>
-    </section>
-
-    <hr class="m-0">
-
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
       <div class="w-100">
         <h2 class="mb-5">Skills</h2>
@@ -385,6 +290,79 @@
             <i class="fa-li fa fa-check"></i>            
             Mentoring</li>
         </ul>
+      </div>
+    </section>
+
+    <hr class="m-0">    
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="resume">
+      <div class="w-100">
+        <h2 class="mb-5">Resume</h2>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0"><a class="nav-link js-scroll-trigger" href="https://docs.google.com/document/d/1IXDrWeU0iApa1xaqfxj_RwQClak7VWvnZVeZDwfzm1g/edit">You can find it here</a>
+            </h3>
+          </div>
+        </div>
+      </div>
+
+    </section>
+
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
+      <div class="w-100">
+        <h2 class="mb-5">Education</h2>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Microverse</h3>
+            <div class="subheading mb-3">Diploma</div>
+            <p>Remote Full Stack Web Development Program, Full Time</p>
+            <p>Handling of 1600+ hours mastering algorithms, data structures, and full-stack development while simultaneously developing projects with Ruby, Rails, JavaScript, React, and Redux</p>
+            <p>Developing skills in remote pair-programming using GitHub, industry-standard Gitflow, and daily standups to communicate and collaborate with international remote developers</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">October 2019 - Present</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Tecnológico Nacional De México (ITL)</h3>
+            <div class="subheading mb-3">Computer Systems Engineer</div>
+            <p>ISC (Degree in process)</p>
+            <p>Implemented an Android mobile test server with open source software and research about the work environment, functionalities, and tools to handle, aside with a post-implementation test automation suite</p>
+            <p>Outstanding performance testimony on Final Exam for Graduate Studies</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">August 2011 - June 2017</span>
+          </div>
+        </div>
+
+		    <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">TECNM</h3>
+            <div class="subheading mb-3">Module for Entrepreneurship and Management</div>
+            <p>Participated in the ‘Gamification - Hack Bajío’ contest realized by ITESM, collaborating on creative and solution processes</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">September - November 2015</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Consciencia Consultores</h3>
+            <div class="subheading mb-3">Diploma</div>            
+            <p>Neuro-Linguistic Programming Master Practitioner Certificate</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">February - December 2018</span>
+          </div>
+        </div>
+
       </div>
     </section>
 
